Fixed a bug on mobile due to address bar

--- a/src/utils/Layout/_styles.module.scss
+++ b/src/utils/Layout/_styles.module.scss
@@ -1,5 +1,7 @@
 .main {
+    position: fixed;
     display: block;
-    height: calc(100vh - 50px);
+    width: 100%;
+    height: calc(100% - 50px);
     overflow: hidden;
 }
